--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 
 <html>
-    <head>
+    <head lang="en">
+        <meta
         <title>A history of browsers</title>
     </head>
     <body>
@@ -13,9 +14,9 @@
             <h2>Table of Contents</h2>
             <ul>
                 <li><a href="#introduction">Introduction</a></li>
-                <li><a href="#ie">A brief history of IE</a></li>
-                <li><a href="#firefox">A brief history of Firefox</a></li>
-                <li><a href="#chrome">A brief history of Chrome</a></li>
+                <li><a href="#ie">Internet Explorer</a></li>
+                <li><a href="#firefox">Firefox</a></li>
+                <li><a href="#chrome">Chrome</a></li>
             </ul>
         </section>
 
