--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
     <head lang="en">
         <meta
         <title>A history of browsers</title>
+        <link rel="stylesheet"
+        href="https://fonts.googleapis.com/css?family=Oswald">
+        <link rel="stylesheet" href="style.css">
     </head>
     <body>
         <header>
