--- a/index.html
+++ b/index.html
@@ -3,9 +3,8 @@
 <html>
     <head lang="en">
         <title>A history of browsers</title>
-        <link rel="stylesheet"
-        href="https://fonts.googleapis.com/css?family=Oswald">
         <link rel="stylesheet" href="style.css">
+        <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Oswald">
     </head>
     <body>
         <h1>A history of browsers</h1>
