--- a/index.html
+++ b/index.html
@@ -2,8 +2,9 @@
 
 <html>
     <head lang="en">
-        <meta
         <title>A history of browsers</title>
+        <link rel="stylesheet" href="style.css">
+        <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Oswald|Open+Sans">
     </head>
     <body>
         <header>
