--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <head lang="en">
         <title>A history of browsers</title>
         <link rel="stylesheet" href="style.css">
-        <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Oswald">
+        <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Oswald|Open+Sans">
     </head>
     <body>
         <h1>A history of browsers</h1>
